--- a/index.html
+++ b/index.html
@@ -34,7 +34,24 @@
             <img src="/assets/images/icone_carrinho.svg" alt="Carrinho de Compras"
         </button>
     </header>
-    <main></main>
+    <main>
+        <section>
+            <h2>Produtos</h2>
+            <ul>
+                <li> 
+                    <figure>
+                        <img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro - Roxa">
+                        <figcaption>Camiseta Dev em Dobro - Roxa</figcaption>
+                    </figure>
+                    <div>
+                        <span> Cor : Roxa</span>
+                        <span> Tamanho : M</span>
+                        <span> R$89,00</span>
+                        <button>Adicionar ao Carrinho</button>
+                    </div>
+                </li>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
