Criação do rodape html

--- a/index.html
+++ b/index.html
@@ -52,6 +52,39 @@
                 </li>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <nav>
+            <h3>Institucional</h3>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#produtos">Produtos</a></li>
+                <li><a href="#perguntas-frequentes">Perguntas Frequentes</a></li>
+                <li><a href="#fale-conosco">Fale Conosco</a></li>
+               
+            </ul>
+            <h3>Ajuda</h3>
+            <ul>
+                <li><a href="/">Ajuda</a></li>
+                <li></li><a href="#trocas">Trocas e Devoluções</a></li>
+                <li></li><a href="#termos">Termos e Condições</a></li>
+                <li></li><a href="#politicas">Politicas de Privacidade</a></li>
+                <li></li><a href="#padrao">Padrão de Qualidade</a></li>
+            </ul>
+            <h3>Endereço</h3>
+            <ul>
+                <li><a href="/">Endereço</a></li>
+                <li><a href="#">Rua vale do Cilicio</a></li>
+                <li>São Francisco, California</li>
+                <li>Estados Unidos da America</li>
+                <li><a href="#fone">(34)1234-5678</a></li>
+                <li><a href="#email">vendas@ecommerceedd.com</a></li>
+               
+            </ul>
+        </nav>
+        <div>@2024 - Todos os direitos reservados
+
+        </div>
+    </footer>
 </body>
 </html>
