--- a/index.html
+++ b/index.html
@@ -11,13 +11,25 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/cabecalho.css">
+   
 </head>
 <body>
-    <header>
-        <a href="/">
+    <header class="cabecalho"
+        <div class="header-conteudo">
+           <div class="header-esquerda">
+
+            <button class="menu-hamburguer">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+
+        <a class="logo" href="/">
             <img src="./assets/images/logo.svg" alt="Dev em Dobro">
         </a>
-        <nav>
+            </div>
+        <nav class="menu-principal">
             <ul>
                 <li>
                     <a href="#home">Home</a>
@@ -37,9 +49,10 @@
                
             </ul>
         </nav>
-        <button>
+        <button class="botao-carrinho">
             <img src="/assets/images/icone_carrinho.svg" alt="Carrinho de Compras"
         </button>
+        </div>
     </header>
     <main>
         <section>
